# Camplight-RewriteForge-Service

./: .dockerignore  .gitignore  .ruff.toml  .secrets.sample  .zap.yaml  Dockerfile  README.md  ROADMAP.md  docker-compose.yml  lint.bat  lint.ps1  lint.sh  pyproject.toml  pytest.ini  requirements.txt
docs/source/: adapters_adapter.rst  adapters_gemini.rst  adapters_openai.rst  adapters_provider.rst  adapters_stub.rst  conf.py  deployment_configuration.rst  deployment_prompt_templates.rst  deployment_read_secrets.rst  entrypoint.rst  index.rst  services_v1_routes.rst
src/: entrypoint.py
src/adapters/: adapter.py  gemini.py  openai.py  provider.py  stub.py
src/deployment/: configuration.py  prompt_templates.py  read_secrets.py
src/services/v1/: routes.py
src/tests/isolated/: testclient.py
